<resources>
    <string name="app_name">EParcialEmilioPorteros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ISesion">Iniciar Sesión</string>
    <string name="HBienvenido">!Hola¡ !Bienvenido a nuestra App¡</string>
    <string name="Email">Email</string>
    <string name="HCorreo">Ingrese su correo</string>
    <string name="TPassword">Password</string>
    <string name="HPassword">Ingrese su password</string>
    <string name="TIngresar">Ingresar</string>
    <string name="NHTitle">Emilio Porteros</string>
    <string name="NHSubtitle">emilio.porteros@mechanics.com</string>
</resources>